# Clide

./: .gitignore  CHANGELOG.md  Cargo.toml  INSTALL.md  LICENSE  README.md  SECURITY.md  build.sh  config.example.yaml  debug.sh  fix-libsignal.sh  gitignore  hosts.example.yaml  install.sh  requirements.txt  secrets.example.yaml  setup.sh
.github/workflows/: auto-release.yml  build.yml  release.yml
docs/: COMPARISON.md  CONTRIBUTING.md  INSTALL.md  ROADMAP.md  RUST_DEPLOYMENT_GUIDE.md  SECRETS.md  SECURITY.md  SECURITY_IMPROVEMENTS.md  SKILLS_ROADMAP.md  USER_GUIDE.md  WORKFLOWS.md
scripts/: install-service.sh
skills/: example_skill.yaml
skills/AI/: aiwb_manager.yaml  picoclaw_cascade.yaml
skills/Security/: docker_ai_sandbox.yaml  intrusion_alert.yaml  lynis_audit.yaml  port_scanner.yaml  termux_hardening.yaml  vault_auto_backup.yaml  vps_hardening.yaml  vps_manager.yaml
skills/System/: backup_skill.yaml  clide_install.yaml  clide_update.yaml  debugger.yaml  maintenance_cron.yaml  monitoring_skill.yaml  self_update.yaml  self_update_termux.yaml  system_overview.yaml  vault_skill.yaml
skills/Telegram/: telegram_manager.yaml
src/: __init__.py  agent.rs  bot.py  bot.rs  brain.py  clide.py  config.py  config.rs  database.rs  executor.py  executor.rs  gemini.rs  hosts.rs  lib.rs  logger.py  logger.rs  main.rs  markdown.rs  matrix.rs  memory.py  memory.rs  openai_client.rs  output_utils.rs  pass_store.rs  provider.rs  safety.py  scheduler.rs  scrubber.rs  search.rs  signal.rs  ssh.rs  telegram.rs  telegram_bot.rs  update.rs  workflow.rs
src/Skills/: manager.rs  mods.rs
src/skills/: manager.rs  mod.rs  mods.rs
