[package]
name = "clide"
version = "0.2.0"
edition = "2021"
authors = ["juanitto-maker"]
description = "AI bot for Termux - chat via Signal, powered by Gemini"

[dependencies]
# Async and HTTP
tokio = { version = "1.0", features = ["full"] }
# native-tls is required for HTTPS on Android/Termux (no rustls support by default)
reqwest = { version = "0.11", features = ["json", "native-tls"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Database and Environment
rusqlite = { version = "0.29", features = ["bundled"] }
dotenvy = "0.15"

# Logging and Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "registry"] }
tracing-appender = "0.2"
log = "0.4"

# Utilities
anyhow = "1.0"
chrono = "0.4"
colored = "2.0"
