[package]
name = "clide"
version = "0.3.0"
edition = "2021"
authors = ["juanitto-maker"]
description = "AI bot for Termux - chat via Element/Matrix, powered by Gemini"

[dependencies]
# Async and HTTP
tokio = { version = "1.0", features = ["full"] }
# rustls = pure-Rust TLS, no OpenSSL dependency — works on Linux and Android/Termux
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "multipart"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Database and Environment
rusqlite = { version = "0.29", features = ["bundled"] }
dotenvy = "0.15"

# Logging and Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "registry"] }
tracing-appender = "0.2"
log = "0.4"

# Utilities
anyhow = "1.0"
chrono = "0.4"
colored = "2.0"
